--- a/css/style.css
+++ b/css/style.css
@@ -1056,3 +1056,16 @@ textarea#comment::placeholder {
 .margin_top90 {
     margin-top: 90px;
 }
+
+.solar {
+    width: 100%;
+    float: left;
+    background-color: #3f9f2e;
+    height: 750px;
+    margin-bottom: 150px;
+}
+
+.border-rouded{
+    border-radius: 10px;
+    box-shadow: 3px 2px 6px #c3c3c3;
+}
